--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: Minimal theme
+title: UCSC EdgeLab
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+description: 
 google_analytics:
 theme: jekyll-theme-minimal
