--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: UCSC EdgeLab
 logo: /assets/img/logo.png
-description: 
+description: Distributed Data Management 
 google_analytics:
 theme: jekyll-theme-minimal
