--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: UCSC EdgeLab
+title: UCI EdgeLab
 logo: /figs/logo.png
 description: Distributed Data Management 
 google_analytics: UA-137897846-1
