--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: UCI EdgeLab
-logo: /figs/logo.png
+logo: /figs/ICS.png
 description: Distributed Data Management 
 google_analytics: UA-137897846-1
 theme: jekyll-theme-minimal
